Fix some new sonar issues